<resources>
    <string name="app_name">MovieBoxVM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">movies</string>
    <string name="tab_text_2">tvshow</string>
    <string name="image_item_movie">Image Item Movie</string>
    <string name="nama_movie">Nama Movie</string>
    <string name="tanggal_movie">Tanggal Movie</string>
    <string name="image_detail_movie">Image Detail Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="value_detail_name">Value Detail Name</string>
    <string name="release_date">Release Date</string>
    <string name="value_release_date">Value Release Date</string>
    <string name="overview">Overview</string>
    <string name="value_overview">Value Overview</string>
    <string name="image_item_tvshow">Image Item TvShow</string>
    <string name="image_detail_tvshow">Image Detail Tvshow</string>
    <string name="tvshow_name">Tvshow Name</string>
</resources>
