<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.movie.DetailMovieActivity">

    <ImageView
        android:id="@+id/img_detail_movie"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_detail_movie" />

    <TextView
        android:id="@+id/tv_detail_name_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detmov_value_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_detail_name"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_detail_name_movie"
        android:layout_toEndOf="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detail_date_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tv_detmov_value_name"
        android:layout_toEndOf="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detmov_value_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_release_date"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_detail_date_movie"
        android:layout_toEndOf="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detail_overview_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_below="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detmov_value_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_overview"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_below="@id/tv_detail_overview_movie" />

</RelativeLayout>