<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/cv_item_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_home_movie"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/image_item_movie" />

        <TextView
            android:id="@+id/tv_home_name_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_movie"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:textSize="16sp"
            android:layout_toEndOf="@id/img_home_movie"
            />

        <TextView
            android:id="@+id/tv_home_date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_movie"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_toEndOf="@id/img_home_movie"
            android:layout_below="@+id/tv_home_name_movie"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>